--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.4.7",
     "chess.js": "^1.0.0",
     "framer-motion": "^12.0.5",
+    "lucide-react": "^0.515.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dnd": "^16.0.1",
